--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cabinet of Coffee Affairs</title>
+    <title>Georges Coffee</title>
   </head>
   <body>
     <div id="root"></div>
